--- a/app-vue3/package.json
+++ b/app-vue3/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@garfish/bridge-vue-v3": "^1.9.0",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
-    "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vue-tsc": "^0.38.4"
   }
