--- a/main-app/package.json
+++ b/main-app/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "garfish": "^1.9.0",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.33.1",
     "@vitejs/plugin-vue": "^3.0.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "vite": "^3.0.0"
   }
 }
