--- a/main-app/package.json
+++ b/main-app/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "garfish": "^1.9.0",
+    "path": "^0.12.7",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.33.1",
+    "@types/node": "^18.6.1",
     "@vitejs/plugin-vue": "^3.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
